tests/fail/parser-import2.dit
import Test from "/not/a/real/link";

A {}